--- a/pocket-change/frontend/src/main/webapp/index.html
+++ b/pocket-change/frontend/src/main/webapp/index.html
@@ -34,14 +34,14 @@
            replaced with form elements via the call to bind in the add
            method. This form will replace the lift:AddEntry.addentry element
            below. -->
-      <lift:AddEntry.addentry form="POST">
+      <!--lift:AddEntry.addentry form="POST">
         <div id="entryform">
           <div class="column span-24"><h3>Entry Form</h3>
             <e:account /> <e:dateOf /> <e:desc /> <e:value />
             <e:tags/><button>Add $</button>
           </div>
         </div>
-      </lift:AddEntry.addentry>
+      </lift:AddEntry.addentry-->
     </div>
 ​
     <script type="text/javascript">
