--- a/pocket-change/frontend/src/main/webapp/templates-hidden/wizard-all.html
+++ b/pocket-change/frontend/src/main/webapp/templates-hidden/wizard-all.html
@@ -1,23 +1,54 @@
-<div>
-  <wizard:screen_info><div>Page <wizard:screen_number/> of <wizard:total_screens/></div></wizard:screen_info>
-  <wizard:wizard_top> <div> <wizard:bind/> </div> </wizard:wizard_top>
-  <wizard:screen_top> <div> <wizard:bind/> </div> </wizard:screen_top>
-  <wizard:errors> <div> <ul> <wizard:item> <li> <wizard:bind/> </li> </wizard:item> </ul> </div> </wizard:errors>
-  <div> <wizard:fields>
-      <table>
-        <wizard:line>
-          <tr>
-            <td>
-              <wizard:label><label wizard:for=""><wizard:bind/></label></wizard:label>
-	      <wizard:help><span><wizard:bind/></span></wizard:help>
-	      <wizard:field_errors> <ul> <wizard:error> <li> <wizard:bind/> </li> </wizard:error> </ul> </wizard:field_errors>
-          </td>
-          <td> <wizard:form/> </td>
-          </tr>
-        </wizard:line>
-      </table>
-    </wizard:fields> </div>
-  <div> <table> <tr> <td> <wizard:prev/> </td> <td> <wizard:cancel/> </td> <td> <wizard:next/> </td> </tr> </table> </div>
-  <wizard:screen_bottom> <div> <wizard:bind/> </div> </wizard:screen_bottom>
-  <wizard:wizard_bottom> <div> <wizard:bind/> </div> </wizard:wizard_bottom>
-</div>
+<lift:surround with="default" at="content">
+<head>
+  <!-- include the required plugins -->
+  <script type="text/javascript" src="/scripts/date.js"></script>
+  <!--[if IE]>
+  <script type="text/javascript" src="/scripts/jquery.bgiframe.js">
+  </script>
+  <![endif]-->
+​
+  <!-- include the jQuery DatePicker JavaScript and CSS -->
+  <script type="text/javascript" src="/scripts/jquery.datePicker.js">
+  </script>
+  <link rel="stylesheet" type="text/css" href="/style/datePicker.css" />
+</head>
+    <!-- The contents of this element will be passed to the summary method
+         in the HomePage snippet. The call to bind in that method will
+         replace the XML tags below (e.g. account:name) with the account
+         data and return a NodeSeq to replace the lift:HomePage.summary
+         element. -->
+    <lift:HomePage.summary>
+      <div class="column span-24 bordered">
+        <h2>Summary of accounts:</h2>
+        <account:entry>
+          <acct:name /> : <acct:balance /> <br/>
+        </account:entry>
+      </div>
+      <hr />
+    </lift:HomePage.summary>
+​
+    <div class="column span-24">
+      <!-- The contents of this element will be passed into the add method
+           in the AddEntry snippet. A form element with method "POST" will
+           be created and the XML tags (e.g. e:account) below will be
+           replaced with form elements via the call to bind in the add
+           method. This form will replace the lift:AddEntry.addentry element
+           below. -->
+      <!--lift:AddEntry.addentry form="POST">
+        <div id="entryform">
+          <div class="column span-24"><h3>Entry Form</h3>
+            <e:account /> <e:dateOf /> <e:desc /> <e:value />
+            <e:tags/><button>Add $</button>
+          </div>
+        </div>
+      </lift:AddEntry.addentry-->
+    </div>
+​
+    <script type="text/javascript">
+      Date.format = ’yyyy/mm/dd’;
+      jQuery(function () {
+        jQuery(’#entrydate’).datePicker({startDate:’00010101’,
+                                        clickInput:true});
+      })
+    </script>
+</lift:surround>
