Test des templates et du passage de variables entre snippets

--- a/pocket-change/frontend/src/main/webapp/index.html
+++ b/pocket-change/frontend/src/main/webapp/index.html
@@ -28,6 +28,10 @@
     </lift:HomePage.summary>
 ​
     <div class="column span-24">
+        <lift:OtherSnippet.summary>
+            <p>Test de passage de variable entre snippets</p>
+            <p> <other:value/></p> <br/>
+        </lift:OtherSnippet.summary>
       <!-- The contents of this element will be passed into the add method
            in the AddEntry snippet. A form element with method "POST" will
            be created and the XML tags (e.g. e:account) below will be
