Test du explicit view dispatch

--- a/pocket-change/frontend/src/main/webapp/index.html
+++ b/pocket-change/frontend/src/main/webapp/index.html
@@ -1,4 +1,4 @@
-<lift:surround with="default" at="content">
+<lift:surround xmlns:lift="http://liftweb.net/" with="default" at="content">
 <head>
   <!-- include the required plugins -->
   <script type="text/javascript" src="/scripts/date.js"></script>
