Test du view dispatching

--- a/pocket-change/frontend/src/main/webapp/templates-hidden/wizard-all.html
+++ b/pocket-change/frontend/src/main/webapp/templates-hidden/wizard-all.html
@@ -1,4 +1,4 @@
-<lift:surround with="default" at="content">
+<lift:surround with="default" at="content" xmlns:lift="http://liftweb.net/">
 <head>
   <!-- include the required plugins -->
   <script type="text/javascript" src="/scripts/date.js"></script>
