--- a/pocket-change/frontend/src/main/webapp/test-templates/test.html
+++ b/pocket-change/frontend/src/main/webapp/test-templates/test.html
@@ -46,6 +46,16 @@
         <div class="lift:snippet?type=StaticDispatchSnippet">
             <p>Method invocation on static snippet</p>
         </div>
+
+          <h2>Liste des taches</h2>
+          <ul >
+            <div class="lift:Tasks.listEditorFriendly">
+              <li>
+                <h3><span id="label">Label de la tâche</span></h3>
+                <p><span id="description">Description de la tâche</span></p>
+              </li>
+            </div>
+          </ul>
      </div>
    </body>
 
