Test des templates editor friendly

--- a/pocket-change/frontend/src/main/webapp/test-templates/test.html
+++ b/pocket-change/frontend/src/main/webapp/test-templates/test.html
@@ -51,8 +51,8 @@
           <ul >
             <div class="lift:Tasks.listEditorFriendly">
               <li>
-                <h3><span id="label">Label de la tâche</span></h3>
-                <p><span id="description">Description de la tâche</span></p>
+                <h3 id="label">Label de la tâche</h3>
+                <p class="description">Description : </p>
               </li>
             </div>
           </ul>
