Test des stateful snippets

--- a/pocket-change/frontend/src/main/webapp/test-templates/test.html
+++ b/pocket-change/frontend/src/main/webapp/test-templates/test.html
@@ -47,6 +47,14 @@
             <p>Method invocation on static snippet</p>
         </div>
 
+         <h3 class="lift:BridgeKeeper.challenge">
+            <p>
+                Données conservées en session :
+                <span id="count">Count : </span>
+                <span id="stringValue">String value : </span>
+            </p>
+         </h3>
+
           <h2>Liste des taches</h2>
           <ul >
             <div class="lift:Tasks.listEditorFriendly">
