Test des stateful snippets

--- a/pocket-change/frontend/src/main/webapp/test-templates/test.html
+++ b/pocket-change/frontend/src/main/webapp/test-templates/test.html
@@ -23,37 +23,38 @@
             <!--<p> <other:value/></p> <br/>-->
         </div>
 
-        <!-- Dynamic mapping -->
-        <div class="lift:snippet?type=DynamicSnippet.dynamicMethod">
-            <p>Dynamic method invocation on dynamic snippet</p>
-        </div>
+        <!--&lt;!&ndash; Dynamic mapping &ndash;&gt;-->
+        <!--<div class="lift:snippet?type=DynamicSnippet.dynamicMethod">-->
+            <!--<p>Dynamic method invocation on dynamic snippet</p>-->
+        <!--</div>-->
 
-        <div class="lift:snippet?type=DynamicDispatchSnippet.toto">
-            <p>Static method invocation on dynamic snippet</p>
-        </div>
+        <!--<div class="lift:snippet?type=DynamicDispatchSnippet.toto">-->
+            <!--<p>Static method invocation on dynamic snippet</p>-->
+        <!--</div>-->
 
-        <div class="lift:snippet?type=DynamicDispatchSnippet.toto">
-            <p>Static non existant method invocation on dynamic snippet</p>
-        </div>
+        <!--<div class="lift:snippet?type=DynamicDispatchSnippet.toto">-->
+            <!--<p>Static non existant method invocation on dynamic snippet</p>-->
+        <!--</div>-->
 
-        <!-- Explicit mapping -->
-        <div class="lift:snippet?type=StaticDispatchSnippet.toto">
-            <p>Method invocation on static snippet</p>
-        </div>
+        <!--&lt;!&ndash; Explicit mapping &ndash;&gt;-->
+        <!--<div class="lift:snippet?type=StaticDispatchSnippet.toto">-->
+            <!--<p>Method invocation on static snippet</p>-->
+        <!--</div>-->
 
-        <br/>
+        <!--<br/>-->
 
-        <div class="lift:snippet?type=StaticDispatchSnippet">
-            <p>Method invocation on static snippet</p>
-        </div>
+        <!--<div class="lift:snippet?type=StaticDispatchSnippet">-->
+            <!--<p>Method invocation on static snippet</p>-->
+        <!--</div>-->
 
-         <h3 class="lift:BridgeKeeper.challenge">
+         <div class="lift:BridgeKeeper.challenge">
             <p>
-                Données conservées en session :
+                <h3 id="etape">Etape :</h3>
                 <span id="count">Count : </span>
                 <span id="stringValue">String value : </span>
+                <a class="link:link">Passer à l'étape suivante</a>
             </p>
-         </h3>
+         </div>
 
           <h2>Liste des taches</h2>
           <ul >
