Test des stateful snippets

--- a/pocket-change/frontend/src/main/webapp/test-templates/test.html
+++ b/pocket-change/frontend/src/main/webapp/test-templates/test.html
@@ -52,7 +52,7 @@
                 <h3 id="etape">Etape :</h3>
                 <span id="count">Count : </span>
                 <span id="stringValue">String value : </span>
-                <a class="link:link">Passer à l'étape suivante</a>
+                <a class="link">Passer à l'étape suivante</a>
             </p>
          </div>
 
