Test des formulaires

--- a/pocket-change/frontend/src/main/webapp/templates-hidden/wizard-all.html
+++ b/pocket-change/frontend/src/main/webapp/templates-hidden/wizard-all.html
@@ -21,7 +21,7 @@
       <div class="column span-24 bordered">
         <h2>Summary of accounts:</h2>
         <account:entry>
-          <acct:name /> : <acct:balance /> <br/>
+          <acct:name /> : <acct:balance /> <br/>   p
         </account:entry>
       </div>
       <hr />
