Chargement des templates dans le snippet

--- a/pocket-change/frontend/src/main/webapp/templates-hidden/tasks/stage1.html
+++ b/pocket-change/frontend/src/main/webapp/templates-hidden/tasks/stage1.html
@@ -1,5 +1,5 @@
-<div class="lift:TasksEdition.editTask" form="POST" multipart="true">
-    <h2>Edition de la tache</h2>
+<div>
+    <h2>Informations de base</h2>
     <h3 id="label">Label : </h3>
     <h3 id="description">Description : </h3>
     <h3>Importance : <br/><span id="importance">Groupe de boutons</span></h3>
