Gestion de la vue

--- a/pocket-change/frontend/src/main/webapp/templates-hidden/tasks/stage1.html
+++ b/pocket-change/frontend/src/main/webapp/templates-hidden/tasks/stage1.html
@@ -1,8 +1,18 @@
 <div>
     <h2>Informations de base</h2>
-    <h3 id="label">Label : </h3>
-    <h3 id="description">Description : </h3>
-    <h3>Importance : <br/><span id="importance">Groupe de boutons</span></h3>
-    <h3 id="saveButton"/>
-    <h3 id="nextButton"/>
+    <table>
+        <tr>
+            <td>Label : </td><td><span id="label"/></td>
+        </tr>
+        <tr>
+            <td>Importance : </td><td><span id="importance"/></td>
+        </tr>
+        <tr>
+             <td>Description : </td><td><span id="description"/></td>
+        </tr>
+    </table>
+    <div class="buttons">
+        <h3 id="nextButton"/>
+        <h3 id="saveButton"/>
+    </div>
 </div>
