--- a/pocket-change/frontend/src/main/webapp/templates-hidden/tasks/stage2.html
+++ b/pocket-change/frontend/src/main/webapp/templates-hidden/tasks/stage2.html
@@ -1,6 +1,12 @@
 <div>
     <h2>Autres</h2>
-    <h3 id="image">Ajouter une image : </h3><br/>
-    <h3 id="saveButton"/>
-    <h3 id="previousButton"/>
+    <table>
+        <tr>
+            <td>Ajouter une image : </td><td><span id="image"></span></td>
+        </tr>
+    </table>
+    <div  class="buttons">
+        <h3 id="previousButton"/>
+        <h3 id="saveButton"/>
+    </div>
 </div>
