Nettoyage de la vue

--- a/pocket-change/frontend/src/main/webapp/templates-hidden/tasks/tasks.html
+++ b/pocket-change/frontend/src/main/webapp/templates-hidden/tasks/tasks.html
@@ -4,7 +4,14 @@
 
 /* <![CDATA[ */
 .buttons {
-  text-align: right;
+  position: absolute;
+  bottom: 10px;
+  right : 0px;
+}
+
+.mainTaskDiv {
+  position: relative;
+  height : 500px;
 }
   /* ]]> */
 
