--- a/pocket-change/frontend/src/main/webapp/templates-hidden/tasks/stage2.html
+++ b/pocket-change/frontend/src/main/webapp/templates-hidden/tasks/stage2.html
@@ -2,6 +2,9 @@
     <h2>Autres</h2>
     <table>
         <tr>
+            <td colspan="2"><span id="imageViewing">Image</span></td>
+        </tr>
+        <tr>
             <td>Ajouter une image : </td><td><span id="image"></span></td>
         </tr>
     </table>
